need to fix login buttons overlapping with loge when zooming in

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
   width: 100%;
   height: 64px;
   color: #f0f0f0;
-  background-color: hsl(0, 0%, 10%);
+  background-color: hsl(0, 0%, 0%);
   align-items: center;
   position: fixed;
   z-index: 1;
@@ -57,6 +57,7 @@ header {
 .login {
   width: 120px;
   height: 36px;
+  max-width: 20vw;
   border-radius: 50px;
   color: #f0f0f0;
   font-size: 16px;
@@ -103,7 +104,7 @@ header {
 /*Sidebar*/
 nav {
   height: 100vh;
-  width: 2%;
+  width: 48px;
 
   display: flex;
   flex-direction: column;
@@ -113,7 +114,7 @@ nav {
   position: fixed;
   z-index: 1;
   top: 64px;
-  background-color: hsl(0, 0%, 10%);
+  background-color: hsl(0, 0%, 0%);
   color: #f0f0f0;
 }
 
@@ -129,12 +130,13 @@ nav a{
 
 .page_icon{
   height: 20px;
+  max-width: 60%;
 }
 
 /*Main*/
 main{
   padding-top: 64px;
-  margin-left: 2%;
+  margin-left: 48px;
   color: #f0f0f0;
 }
 
